// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard should render with Classified in grey label 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      small={true}
    >
      <span
        className="classifiedLabel"
      >
        Classified
      </span>
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      heading={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      small={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            small={true}
          >
            <LocationIcon />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            small={true}
          >
            <MoneyIcon />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          small={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with company confidential in grey label 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      small={true}
    >
      <span
        className="confidentialLabel"
      >
        Company Confidential
      </span>
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      heading={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      small={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            small={true}
          >
            <LocationIcon />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            small={true}
          >
            <MoneyIcon />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          small={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with default props 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      small={true}
    >
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      heading={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      small={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            small={true}
          >
            <LocationIcon />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            small={true}
          >
            <MoneyIcon />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          small={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with featured label 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      small={true}
    >
      <span
        className="featuredLabel"
      >
        Feature
      </span>
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      heading={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      small={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            small={true}
          >
            <LocationIcon />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            small={true}
          >
            <MoneyIcon />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          small={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with selling points props 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      small={true}
    >
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      heading={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="sellingPointsSection"
  >
    <ul
      className="sellingPointsList"
    >
      <li>
        <Text
          baseline={true}
          className="sellingPoint"
          small={true}
        >
          We practice a vibrant & energetic office culture
        </Text>
      </li>
      <li>
        <Text
          baseline={true}
          className="sellingPoint"
          small={true}
        >
          Our company supports a fun yet balanced working environment
        </Text>
      </li>
      <li>
        <Text
          baseline={true}
          className="sellingPoint"
          small={true}
        >
          We support a safe environment for our employees
        </Text>
      </li>
    </ul>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      small={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            small={true}
          >
            <LocationIcon />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            small={true}
          >
            <MoneyIcon />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          small={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;
